tests/baselines/reference/intersectionTypeAssignment.errors.txt
intersectionTypeAssignment.ts(8,1): error TS2741: Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: string; }'.
intersectionTypeAssignment.ts(9,1): error TS2322: Type '{ a: string; }' is not assignable to type '{ a: string; } & { b: string; }'.
  Property 'b' is missing in type '{ a: string; }' but required in type '{ b: string; }'.
intersectionTypeAssignment.ts(13,1): error TS2741: Property 'a' is missing in type '{ b: string; }' but required in type '{ a: string; b: string; }'.
intersectionTypeAssignment.ts(14,1): error TS2322: Type '{ b: string; }' is not assignable to type '{ a: string; } & { b: string; }'.
  Property 'a' is missing in type '{ b: string; }' but required in type '{ a: string; }'.


==== intersectionTypeAssignment.ts (4 errors) ====
    declare var a: { a: string };
    declare var b: { b: string };
    declare var x: { a: string, b: string };
    declare var y: { a: string } & { b: string };
    
    a = x;
    a = y;
    x = a;  // Error
    ~
!!! error TS2741: Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: string; }'.
!!! related TS2728 intersectionTypeAssignment.ts:3:29: 'b' is declared here.
    y = a;  // Error
    ~
!!! error TS2322: Type '{ a: string; }' is not assignable to type '{ a: string; } & { b: string; }'.
!!! error TS2322:   Property 'b' is missing in type '{ a: string; }' but required in type '{ b: string; }'.
!!! related TS2728 intersectionTypeAssignment.ts:4:34: 'b' is declared here.
    
    b = x;
    b = y;
    x = b;  // Error
    ~
!!! error TS2741: Property 'a' is missing in type '{ b: string; }' but required in type '{ a: string; b: string; }'.
!!! related TS2728 intersectionTypeAssignment.ts:3:18: 'a' is declared here.
    y = b;  // Error
    ~
!!! error TS2322: Type '{ b: string; }' is not assignable to type '{ a: string; } & { b: string; }'.
!!! error TS2322:   Property 'a' is missing in type '{ b: string; }' but required in type '{ a: string; }'.
!!! related TS2728 intersectionTypeAssignment.ts:4:18: 'a' is declared here.
    
    x = y;
    y = x;
    